@@ -1,3 +1,8 @@
+2012-02-29  William A. Perkins  <william.perkins@pnnl.gov>
+
+	* scripts/mass2_setup.py: add a script to set up VisIt to view
+	MASS2 output in a nice way
+
 2011-12-19  William A. Perkins  <william.perkins@pnnl.gov>
 
 	* block_grid.f90 (block_gridplot): #ifdef around the actual file
